crates/uitest/fixtures/name_resolution/field_conflict.snap
---
source: crates/uitest/src/lib.rs
expression: diags
input_file: crates/uitest/fixtures/name_resolution/field_conflict.fe
---
error[2-0001]: `x` conflicts with other definitions
  ┌─ field_conflict.fe:2:5
  │
2 │     x: i32
  │     ^ `x` is defined here
3 │     x: u32
  │     - `x` is redefined here


